modules/SecGrp/ingress.tf
resource "aws_security_group" "nginx_ingress_sg" {
  name        = "nginx-ingress-sg"
  vpc_id      = var.VPC_ID
  description = "Security group for NGINX Ingress Load Balancer"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
